--- a/styles.css
+++ b/styles.css
@@ -23,26 +23,27 @@ header {
 header {
   position: relative;
 }
-
-
-header.scroll {
-  background-color: aliceblue;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.374);
-}
-
-
-
 header .nav-bar {
   position: fixed;
   max-width: 1200px;
   padding: 1rem;
   width: 100%;
   height: 60px;
+  z-index: 500;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: background-color 0.3s ease;
 }
+.sticky-nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: black;
+}
+
 .nav-bar .logo {
   font-weight: bold;
   font-size: 16px;
