--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,7 @@ body {
 }
 header {
   background-color: rgba(34, 34, 182, 0.332);
-  background-image: url("https://www.travelaficionados.com/wp-content/uploads/2015/07/Panama-112-500x335.jpg");
-  /* background-image: url("https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0c/ed/f5/7d/refugio-ecologico-mono.jpg?w=700&h=-1&s=1"); */
+  background-image: url("https://www.travelaficionados.com/wp-content/uploads/2015/07/Panama-112-500x335.jpg"); 
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -181,20 +180,21 @@ header .nav-bar .links li a:hover {
   justify-content: center;
   align-items: center;
 }
+.descripcion h1 {
+  margin-left: 1rem;
+  
+}
 .conteiner-sm {
   display: flex;
   position: relative;
+  justify-content: space-around;
 }
-.conteiner-sm .text-img-sm {
-  position: absolute;
-  left: 123px;
-  top: 28px;
-  color: white;
-  transform: translate(-50%, -50%);
-  background-color: rgba(48, 43, 43, 0.7);
-  padding: 10px;
-  width: 246px;
-  font-size: 24px;
+.conteiner-sm img{
+  width: 100%;
+  height: 200px;
+}
+.card {
+  background-color:#198754;
 }
 .carousel {
   width: 124vh;
@@ -222,6 +222,12 @@ header .nav-bar .links li a:hover {
   }
   .conteiner-lg p {
     padding-bottom: 35px;
+  }
+  .descripcion h1 {
+    margin-left: 0;
+  }
+  .nav{
+    display: none;
   }
   .conteiner-lg .descripcion,
   h1,
