--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,14 @@ header .nav-bar .links li a:hover {
   align-items: center;
   justify-content: center;
 }
+.wrap-hero-section {
+  max-width: 700px;
+  color: #fff;
+  padding: 50%;
+}
+.wrap-hero-section h1 {
+  font-weight: bold
+}
 /* Responsive */
 @media (max-width: 998px) {
   header {
